--- a/about.html
+++ b/about.html
@@ -33,11 +33,35 @@
         <section id="about">
           <div class="form">
             <h1 class="judul">About me</h1>
-            <p class="paragraf1">Hello, my name is Moch Alvian Hidayatulloh. I live in Nganjuk city, east java, Indonesia.<br>
-              I am a Jember State Polytechnic student majoring in information technology, I studied programming <br>languages
-              ​​from the beginning of grade 3 of vocational school
+            <p class="paragraf1">Hello, my name is Moch Alvian Hidayatulloh. I live in Nganjuk city, east java, Indonesia.
+              I am a <br> State Polytechnic student majoring in information technology, I studied programming <br>languages
+              ​​from the beginning of grade 3 of vocational school. The languages ​​I learned are <br> Java, Javascript, PHP.
+              <br>
+              <br>
+              My hobbies are gaming, coding, daydreaming and one thing I like is eating satay
             </p>
-            <p>my hobi </p>
+            <h1 class="judul2">Skillset</h1>
+            <!-- mulai pengkelompokan kotak -->
+            <div class="kotak">
+              <div class="form-2">
+                <h1 class="judul3">Frontend</h1>
+                <ul >
+                  <li id="id-item">HTML</li>
+                  <li id="id-item">CSS</li>
+                  <li id="id-item">Javascript</li>
+                </ul>
+              </div>
+
+              <div class="form-3">
+                <h1 class="judul3">Backend</h1>
+                <ul >
+                  <li id="id-item">Java</li>
+                  <li id="id-item">PHP</li>
+                  <li id="id-item">Javascript</li>
+                </ul>
+              </div>
+              <!-- selesi pengkelompokan kotak -->
+            </div>
           </div>
         </section>
       </div>
