--- a/about.html
+++ b/about.html
@@ -60,8 +60,11 @@
                   <li id="id-item">Javascript</li>
                 </ul>
               </div>
-              <!-- selesi pengkelompokan kotak -->
             </div>
+            <!-- selesi pengkelompokan kotak -->
+
+            <h1 class="judul2">Education</h1>
+            <hr class="garis" width="50%">
           </div>
         </section>
       </div>
