--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portofolio</title>
     <link rel="website icon" href="drawable/download.jpg" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/about.css">
   </head>
   <body>
     <!-- nabar -->
@@ -27,7 +28,6 @@
 
     <!-- pengkelompokan menu menu -->
     <nav>
-
       <!-- about mulai -->
       <div class="keseluruhan-3">
         <section id="about">
@@ -62,9 +62,16 @@
               </div>
             </div>
             <!-- selesi pengkelompokan kotak -->
-
+            
+            <!-- mulai Education -->
             <h1 class="judul2">Education</h1>
             <hr class="garis" width="90%">
+            <div class="form-4">
+                <h1 class="judul-4">Politeknik Negeri jember</h1>
+                <p id="id-item-2">Teknologi Informasi</p>
+                <p id="id-item-2">Teknik Infomatika</p>
+                <p id="id-item-2">2022 selesai sekolah</p>
+            </div>
 
           </div>
         </section>
